<resources>
    <string name="app_name">TP3_PARCIAL_BELGRANO_GRUPO4</string>
    <string name="baseUrl">https://dog.ceo/api/breed/</string>
    <!--<string name="user_name">Martina</string>-->
    <string name="user_name_hint">Nombre</string>
    <string name="user_pass_hint">Password</string>
    <string name="user_phone_hint">Telefono</string>
    <string name="upload_image">Subir Foto</string>
    <string name="login_tittle">Login</string>
    <string name="popup_message">Ingresa una url</string>
    //Navigation Drawer
    <string name="title_home">Home</string>
    <string name="title_activity_menu_drawer">menu_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation Image</string>
    <string name="action_settings">Settings</string>
    <string name="image">ImageView</string>
    <string name="profile_header_greet">Hola</string>
    <string name="home">Home</string>
    <string name="favoritos">Favoritos</string>
    <string name="adopcion">Adopción </string>
    <string name="publicacion">Publicación</string>
    <string name="subraza">SubRaza</string>
    <string name="raza">Raza</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuración </string>
    <string name="setting_modo_oscuro"> Modo Oscuro</string>
    <string name="setting_general">Generales</string>
    <string name="nombreDuenio">Dueño</string>
    <string name="ejemploNombreDuenio">Carlos</string>
    <string name="ejemploDescPerro">Muy amistoso y tranquilo. Ama jugar con nenes, le asustan los ruidos fuertes</string>
    <string name="ejemploNombrePerro">Fifi</string>
    <string name="ejemploEdadPerro">Edad: 3 años</string>
    <string name="ejemploGeneroPerro">Genero: M</string>
    <string name="ejemploUbicacionPerro">Ubicacion: BsAs</string>
    <string name="ejemploPesoPerro">Peso: 5 kg</string>
</resources>